examples/test/testpolicy16168.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16168
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key24: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value35
          key26: value3
          key4: value17
      podSelector:
        matchLabels:
          key38: value35
